# carmine-desktop

./: .env.example  .gitignore  .mcp.json  AGENTS.md  Cargo.toml  DEVELOPING.md  GEMINI.md  Makefile  README.md  librust_out.rlib  package-lock.json
.claude/: gsd-file-manifest.json  settings.json
.claude/agents/: cross-platform-reviewer.md  ux-reviewer.md  vfs-parity-reviewer.md
.github/workflows/: build-installer.yml  ci.yml  release.yml
.hive/: issues.jsonl  memories.jsonl
.nyxa/: tasks.md
.nyxa/offline-folders/: architecture.md  design.md  intent.md  log.md  specs.md  tasks.md
.opencode/: gsd-file-manifest.json  opencode.json
.opencode/agents/: cross-platform-reviewer.md  ux-reviewer.md  vfs-parity-reviewer.md
.opencode/plans/: vfs-parity-fixes.md
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  RETROSPECTIVE.md  ROADMAP.md  STATE.md
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/milestones/: v1.0-REQUIREMENTS.md  v1.0-ROADMAP.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
.specs-fire/: state.yaml
.specs-fire/standards/: coding-standards.md  constitution.md  system-architecture.md  tech-stack.md  testing-standards.md
.specsmd/: manifest.yaml
crates/carminedesktop-app/: AGENTS.md  Cargo.toml  build.rs  tauri.conf.json  tauri.windows.conf.json
crates/carminedesktop-app/capabilities/: default.json
crates/carminedesktop-app/frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts  wizard.html
crates/carminedesktop-app/frontend/public/: styles.css
crates/carminedesktop-app/frontend/src/: App.tsx  WizardApp.tsx  bindings.ts  eventBus.ts  ipc.ts  main.tsx  wizard.tsx
crates/carminedesktop-app/frontend/src/components/: ActivityFeed.tsx  AuthBanner.tsx  CacheSection.tsx  Collapsible.tsx  ConfirmModal.tsx  DriveCard.tsx  DriveList.tsx  ErrorFeed.tsx  Icons.tsx  MountCard.tsx  PinCard.tsx  PinDurationPicker.tsx  QuickStats.tsx  Select.tsx  Skeleton.tsx  StatusBar.tsx  Tabs.tsx  ToastHost.tsx  UploadBanner.tsx  autoAnimate.ts  pinDurationOptions.ts
crates/carminedesktop-app/frontend/src/panels/: About.tsx  Dashboard.tsx  General.tsx  Mounts.tsx  Offline.tsx  Settings.tsx
crates/carminedesktop-app/frontend/src/panels/settings/: AboutSection.tsx  GeneralSection.tsx  MountsSection.tsx  OfflineSection.tsx
crates/carminedesktop-app/frontend/src/store/: activity.ts  auth.ts  cache.ts  confirm.ts  drives.ts  errors.ts  mounts.ts  pins.ts  settings.ts  toasts.ts
crates/carminedesktop-app/frontend/src/utils/: format.ts
crates/carminedesktop-app/icons/: icon.icns
crates/carminedesktop-app/icons/files/: file_icons.rc
crates/carminedesktop-app/src/: activity.rs  commands.rs  ipc_server.rs  main.rs  notify.rs  observability.rs  pin_events.rs  shell_integration.rs  tray.rs  update.rs
crates/carminedesktop-app/tests/: integration_tests.rs
crates/carminedesktop-app/windows/: hooks.nsh
crates/carminedesktop-auth/: AGENTS.md  Cargo.toml
crates/carminedesktop-cache/: AGENTS.md  Cargo.toml
crates/carminedesktop-core/: Cargo.toml
crates/carminedesktop-core/src/: config.rs  error.rs  lib.rs  open_online.rs  primary_site.rs  types.rs
crates/carminedesktop-core/tests/: config_tests.rs  observability_types_tests.rs  primary_site_tests.rs  test_open_online.rs
crates/carminedesktop-graph/: Cargo.toml
crates/carminedesktop-graph/src/: client.rs  retry.rs
crates/carminedesktop-graph/tests/: graph_tests.rs
crates/carminedesktop-vfs/: AGENTS.md  Cargo.toml
crates/carminedesktop-vfs/src/: core_ops.rs  fuse_fs.rs  inode.rs  lib.rs  mount.rs  pending.rs  sync_processor.rs  winfsp_fs.rs
crates/carminedesktop-vfs/tests/: core_ops_tests.rs  fuse_integration.rs  offline_vfs_tests.rs  open_file_table_tests.rs  pending_retry.rs  stale_mount_tests.rs  sync_processor_tests.rs  test_collab_gate.rs  test_process_filter.rs  transient_file_tests.rs
crates/cloudmount-app/: Cargo.toml  build.rs  tauri.conf.json
crates/cloudmount-app/capabilities/: default.json
crates/cloudmount-app/icons/: icon.icns
crates/cloudmount-app/scripts/: README.md  cloudmount-kde-helper  cloudmount-kde-open-locally  cloudmount-open-in-sharepoint.desktop  cloudmount-open-locally.desktop  open-in-sharepoint.sh  open-locally.sh  open-online.sh
crates/cloudmount-app/src/: commands.rs  linux_integrations.rs  macos_integrations.rs  main.rs  notify.rs  shell_integration.rs  tray.rs  update.rs  windows_integrations.rs
crates/cloudmount-app/tests/: integration_tests.rs
crates/cloudmount-app/windows/: hooks.nsh
crates/cloudmount-auth/: AGENTS.md  Cargo.toml
crates/cloudmount-cache/: AGENTS.md  Cargo.toml
crates/cloudmount-cache/src/: disk.rs  lib.rs  manager.rs  memory.rs  sqlite.rs  sync.rs  writeback.rs
crates/cloudmount-cache/tests/: cache_tests.rs
crates/cloudmount-core/: Cargo.toml
crates/cloudmount-graph/: Cargo.toml
crates/cloudmount-vfs/: AGENTS.md  Cargo.toml
crates/cloudmount-vfs/src/: cfapi.rs  core_ops.rs  fuse_fs.rs  inode.rs  lib.rs  mount.rs  pending.rs  process_filter.rs  sync_processor.rs  winfsp_fs.rs
crates/cloudmount-vfs/tests/: cfapi_integration.rs  fuse_integration.rs  open_file_table_tests.rs  pending_retry.rs  stale_mount_tests.rs  sync_processor_tests.rs  test_collab_gate.rs  test_process_filter.rs  transient_file_tests.rs
crates/filesync-app/: Cargo.toml  build.rs  tauri.conf.json
crates/filesync-app/src/: commands.rs  main.rs  notify.rs  tray.rs
crates/filesync-app/tests/: integration_tests.rs
crates/filesync-auth/: Cargo.toml
crates/filesync-auth/src/: lib.rs  manager.rs  oauth.rs  storage.rs
crates/filesync-auth/tests/: auth_integration.rs
crates/filesync-cache/: Cargo.toml
crates/filesync-graph/: Cargo.toml
crates/filesync-graph/src/: client.rs  retry.rs
crates/filesync-graph/tests/: graph_tests.rs
docs/: azure-ad-setup.md  builder-guide.md  dev-setup-immutable-linux.md  org-build-guide.md
scripts/: release.ps1  release.sh
(+697 files in other folders)
