[workspace]
resolver = "2"
members = [
    "crates/carminedesktop-core",
    "crates/carminedesktop-auth",
    "crates/carminedesktop-graph",
    "crates/carminedesktop-cache",
    "crates/carminedesktop-vfs",
    "crates/carminedesktop-app",
]

[workspace.package]
version = "0.1.0-rc.37"
edition = "2024"
license = "MIT"
rust-version = "1.85"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.50", features = ["full"] }
tokio-util = { version = "0.7", features = ["rt"] }

# HTTP
reqwest = { version = "0.12", features = ["json", "stream"] }
hyper = { version = "1.8", features = ["server", "http1"] }
hyper-util = { version = "0.1", features = ["tokio"] }
http-body-util = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Logging / tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tracing-appender = "0.2"

# SQLite
rusqlite = { version = "0.32", features = ["bundled"] }

# FUSE filesystem (Linux/macOS)
fuser = "0.17"
libc = "0.2"

# OS integration
keyring = "3.6"
open = "5.3"
dirs = "6.0"

# Concurrent data structures
dashmap = "6.1"

# Utilities
uuid = { version = "1.21", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
base64 = "0.22"
sha2 = "0.10"
md-5 = "0.10"
rand = "0.9"
url = "2.5"
bytes = "1.11"
futures-util = "0.3"

# Workspace crate inter-dependencies
carminedesktop-core = { path = "crates/carminedesktop-core" }
carminedesktop-auth = { path = "crates/carminedesktop-auth" }
carminedesktop-graph = { path = "crates/carminedesktop-graph" }
carminedesktop-cache = { path = "crates/carminedesktop-cache" }
carminedesktop-vfs = { path = "crates/carminedesktop-vfs" }

# Crypto (token storage fallback)
aes-gcm = { version = "0.10.3", features = ["zeroize"] }
argon2 = { version = "0.5.3", default-features = false, features = ["alloc", "zeroize"] }
zeroize = { version = "1.8.2", features = ["derive"] }

# WinFsp filesystem driver (Windows virtual filesystem)
winfsp = { version = "0.12", features = ["system"] }
winfsp-sys = "0.12"
nt-time = { version = "0.8", features = ["chrono"] }
windows = { version = "0.61", features = ["Win32_Foundation", "Win32_UI_WindowsAndMessaging", "Win32_UI_Shell", "Win32_System_Com", "Win32_System_SystemInformation", "Win32_System_LibraryLoader", "Win32_Security", "Win32_Security_Authorization", "Win32_System_Threading"] }
windows-sys = { version = "0.59", features = ["Win32_Foundation", "Win32_Security", "Win32_Storage_FileSystem", "Win32_System_Diagnostics_ToolHelp", "Win32_System_IO", "Win32_System_Threading"] }
winreg = "0.55"

# Tauri v2 (desktop GUI)
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-build = "2"
tauri-plugin-dialog = "2"
tauri-plugin-notification = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
tauri-plugin-opener = "2"
tauri-plugin-deep-link = "2"
tauri-plugin-single-instance = "2"

# URL encoding
urlencoding = "2.1"

# CLI
clap = { version = "4", features = ["derive", "env"] }
dotenvy = "0.15"

# Testing
wiremock = "0.6"
