[package]
name = "cloudmount-app"
version.workspace = true
edition.workspace = true

[features]
default = []
desktop = ["tauri", "tauri-plugin-dialog", "tauri-plugin-notification", "tauri-plugin-updater", "tauri-plugin-process", "tauri-plugin-opener", "tauri-build"]

[dependencies]
cloudmount-core = { workspace = true }
cloudmount-auth = { workspace = true }
cloudmount-graph = { workspace = true }
cloudmount-cache = { workspace = true }
cloudmount-vfs = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
dirs = { workspace = true }
chrono = { workspace = true }
open = { workspace = true }
uuid = { workspace = true }
bytes = { workspace = true }
clap = { workspace = true }
dotenvy = { workspace = true }
tauri = { workspace = true, optional = true }
tauri-plugin-dialog = { workspace = true, optional = true }
tauri-plugin-notification = { workspace = true, optional = true }
tauri-plugin-updater = { workspace = true, optional = true }
tauri-plugin-process = { workspace = true, optional = true }
tauri-plugin-opener = { workspace = true, optional = true }

[target.'cfg(windows)'.dependencies]
windows = { workspace = true }

[build-dependencies]
tauri-build = { workspace = true, optional = true }

[dev-dependencies]
wiremock = { workspace = true }
