[package]
name = "cloudmount-vfs"
version.workspace = true
edition.workspace = true

[dependencies]
cloudmount-core = { workspace = true }
cloudmount-graph = { workspace = true }
cloudmount-cache = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
bytes = { workspace = true }
futures-util = { workspace = true }
dashmap = { workspace = true }

[target.'cfg(any(target_os = "linux", target_os = "macos"))'.dependencies]
fuser = { workspace = true }
libc = "0.2"

[target.'cfg(target_os = "windows")'.dependencies]
cloud-filter = { workspace = true }
nt-time = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros"] }
wiremock = { workspace = true }
serde_json = { workspace = true }
