[package]
name = "filesync-graph"
version.workspace = true
edition.workspace = true

[dependencies]
filesync-core = { workspace = true }
tokio = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }
bytes = { workspace = true }
chrono = { workspace = true }
rand = { workspace = true }
urlencoding = "2"

[dev-dependencies]
wiremock = { workspace = true }
tokio = { workspace = true, features = ["test-util", "macros"] }
